A lot of fixes to make this old stuff at least compile.

--- a/3rdparty/freetype2/CMakeLists.txt
+++ b/3rdparty/freetype2/CMakeLists.txt
@@ -23,15 +23,7 @@ INCLUDE_DIRECTORIES(
 
 ADD_DEFINITIONS("-DFT2_BUILD_LIBRARY")
 
-IF(CMAKE_COMPILER_IS_GNUCC)
-	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -w")
-ENDIF(CMAKE_COMPILER_IS_GNUCC)
-
-IF(CMAKE_COMPILER_IS_GNUCXX)
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -w")
-ENDIF(CMAKE_COMPILER_IS_GNUCXX)
-
-ADD_LIBRARY(pg_freetype2 SHARED
+ADD_LIBRARY(pg_freetype2 STATIC
 	src/autofit/autofit.c
 	src/base/ftapi.c
 	src/base/ftbase.c
@@ -77,13 +69,13 @@ ADD_LIBRARY(pg_freetype2 SHARED
 	src/winfonts/winfnt.c
 )
 
-SET_TARGET_PROPERTIES(pg_freetype2 PROPERTIES
-	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-)
-
 TARGET_LINK_LIBRARIES(pg_freetype2 pg_zlib)
 
-IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
- SET_TARGET_PROPERTIES(pg_freetype2 PROPERTIES COMPILE_FLAGS "-fvisibility=default -w")
-ENDIF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+IF(APPLE)
+	FIND_LIBRARY(Carbon Carbon)
+	FIND_LIBRARY(AGL AGL)
+	FIND_LIBRARY(AppKit AppKit)
+	FIND_LIBRARY(ApplicationServices ApplicationServices)
+	FIND_LIBRARY(CoreServices CoreServices)
+	TARGET_LINK_LIBRARIES(pg_freetype2 ${Carbon} ${AGL} ${AppKit} ${ApplicationServices} ${CoreServices})
+ENDIF()
