--- a/3rdparty/glfw/CMakeLists.txt
+++ b/3rdparty/glfw/CMakeLists.txt
@@ -226,7 +226,7 @@ ENDIF(WIN32)
 
 INCLUDE_DIRECTORIES(lib include)
 
-ADD_LIBRARY(glfw STATIC EXCLUDE_FROM_ALL
+ADD_LIBRARY(glfw STATIC
 
 	include/GL/glfw.h
 	lib/enable.c
@@ -246,6 +246,11 @@ ADD_LIBRARY(glfw STATIC EXCLUDE_FROM_ALL
 
 )
 
-IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
- SET_TARGET_PROPERTIES(glfw PROPERTIES COMPILE_FLAGS "-fvisibility=default -w")
-ENDIF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+IF(APPLE)
+	FIND_LIBRARY(Carbon Carbon)
+	FIND_LIBRARY(AGL AGL)
+	FIND_LIBRARY(AppKit AppKit)
+	FIND_LIBRARY(ApplicationServices ApplicationServices)
+	FIND_LIBRARY(CoreServices CoreServices)
+	TARGET_LINK_LIBRARIES(glfw ${Carbon} ${AGL} ${AppKit} ${ApplicationServices} ${CoreServices})
+ENDIF()
