--- a/3rdparty/libjpeg/CMakeLists.txt
+++ b/3rdparty/libjpeg/CMakeLists.txt
@@ -16,9 +16,7 @@ ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
 	ADD_DEFINITIONS("-DNDEBUG")
 ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
 
-ADD_DEFINITIONS("-DLIBJPEG_DLL")
-
-ADD_LIBRARY(pg_jpeg SHARED
+ADD_LIBRARY(pg_jpeg STATIC
 
 	jaricom.c
 	jcapimin.c
@@ -77,12 +75,3 @@ ADD_LIBRARY(pg_jpeg SHARED
 	jversion.h
 
 )
-
-SET_TARGET_PROPERTIES(pg_jpeg PROPERTIES
-	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-)
-
-IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
- SET_TARGET_PROPERTIES(pg_jpeg PROPERTIES COMPILE_FLAGS "-fvisibility=default -w")
-ENDIF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
