--- a/3rdparty/libpng/CMakeLists.txt
+++ b/3rdparty/libpng/CMakeLists.txt
@@ -7,7 +7,6 @@ ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE=1")
 ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS=1")
 ADD_DEFINITIONS("-D_SCL_SECURE_NO_DEPRECATE=1")
 ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-DPNG_BUILD_DLL")
 
 IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
 	ADD_DEFINITIONS("-D_DEBUG")
@@ -21,7 +20,7 @@ INCLUDE_DIRECTORIES(
 	${zlib_SOURCE_DIR}
 )
 
-ADD_LIBRARY(pg_png SHARED
+ADD_LIBRARY(pg_png STATIC
 
 	png.c
 	png.h
@@ -45,13 +44,4 @@ ADD_LIBRARY(pg_png SHARED
 
 )
 
-SET_TARGET_PROPERTIES(pg_png PROPERTIES
-	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-)
-
 TARGET_LINK_LIBRARIES(pg_png pg_zlib)
-
-IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
- SET_TARGET_PROPERTIES(pg_png PROPERTIES COMPILE_FLAGS "-fvisibility=default -w")
-ENDIF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
