--- a/3rdparty/libvorbis/CMakeLists.txt
+++ b/3rdparty/libvorbis/CMakeLists.txt
@@ -46,7 +46,7 @@ IF(WIN32)
 	FILE(WRITE "${DEF_FILE}" "${VORBIS_DEF}\n${VORBISFILE_DEF}")
 ENDIF(WIN32)
 
-ADD_LIBRARY(pg_vorbis SHARED
+ADD_LIBRARY(pg_vorbis STATIC
 	lib/mdct.c
 	lib/smallft.c
 	lib/block.c
@@ -91,13 +91,4 @@ ADD_LIBRARY(pg_vorbis SHARED
 	${DEF_FILE}
 )
 
-SET_TARGET_PROPERTIES(pg_vorbis PROPERTIES
-	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-)
-
 TARGET_LINK_LIBRARIES(pg_vorbis pg_ogg)
-
-IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
- SET_TARGET_PROPERTIES(pg_vorbis PROPERTIES COMPILE_FLAGS "-fvisibility=default -w")
-ENDIF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
