--- a/3rdparty/openal_soft/CMakeLists.txt
+++ b/3rdparty/openal_soft/CMakeLists.txt
@@ -2,6 +2,10 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
+IF(POLICY CMP0042)
+	CMAKE_POLICY(SET CMP0042 OLD)
+ENDIF()
+
 IF(COMMAND CMAKE_POLICY)
   CMAKE_POLICY(SET CMP0003 NEW)
 ENDIF(COMMAND CMAKE_POLICY)
@@ -374,7 +378,7 @@ ADD_DEFINITIONS(-DAL_BUILD_LIBRARY)
 IF(NOT LIBTYPE)
     SET(LIBTYPE SHARED)
 ENDIF()
-ADD_LIBRARY(pg_openal ${LIBTYPE} ${OPENAL_OBJS} ${ALC_OBJS})
+ADD_LIBRARY(pg_openal SHARED ${LIBTYPE} ${OPENAL_OBJS} ${ALC_OBJS})
 #SET_TARGET_PROPERTIES(pg_openal PROPERTIES VERSION ${LIB_VERSION}
 #                                            SOVERSION ${LIB_MAJOR_VERSION})
 
