--- a/games/superplex/CMakeLists.txt
+++ b/games/superplex/CMakeLists.txt
@@ -196,16 +196,10 @@ ADD_EXECUTABLE(superplex3d WIN32
 	${PACKED_FILE}
 )
 
-SETUP_TARGET(superplex3d)
-TARGET_LINK_LIBRARIES(superplex3d pg_casual pg_sound_static)
+TARGET_LINK_LIBRARIES(superplex3d pg_casual pg_sound)
 SET_PROPERTY(TARGET superplex3d PROPERTY COMPILE_DEFINITIONS "ENGINE_STATIC" APPEND)
 SET_PROPERTY(TARGET superplex3d PROPERTY COMPILE_DEFINITIONS "CORE_STATIC" APPEND)
 SET_PROPERTY(TARGET superplex3d PROPERTY COMPILE_DEFINITIONS "MATH_STATIC" APPEND)
 SET_PROPERTY(TARGET superplex3d PROPERTY COMPILE_DEFINITIONS "MESH_STATIC" APPEND)
 SET_PROPERTY(TARGET superplex3d PROPERTY COMPILE_DEFINITIONS "IMAGE_STATIC" APPEND)
 SET_PROPERTY(TARGET superplex3d PROPERTY COMPILE_DEFINITIONS "SOUND_STATIC" APPEND)
-
-SET_TARGET_PROPERTIES(superplex3d PROPERTIES
-	OUTPUT_NAME "superplex3d"
-	SUFFIX ".exe"
-)
