--- a/math/CMakeLists.txt
+++ b/math/CMakeLists.txt
@@ -5,7 +5,6 @@ PROJECT(pg_math)
 
 INCLUDE(${cmake_SOURCE_DIR}/common.cmake)
 INCLUDE(${cmake_SOURCE_DIR}/defines.cmake)
-INCLUDE(${cmake_SOURCE_DIR}/pch.cmake)
 
 INCLUDE_DIRECTORIES(
 	${CMAKE_CURRENT_SOURCE_DIR}/..
@@ -34,13 +33,5 @@ SET(pg_math_SRC
 	${MOC_FILES}
 )
 
-ADD_LIBRARY(pg_math SHARED EXCLUDE_FROM_ALL ${pg_math_SRC})
-ADD_LIBRARY(pg_math_static STATIC EXCLUDE_FROM_ALL ${pg_math_SRC})
-
-SETUP_LIBRARY(pg_math)
+ADD_LIBRARY(pg_math STATIC ${pg_math_SRC})
 TARGET_LINK_LIBRARIES(pg_math pg_core ${QT_PG_QTCORE_LIBRARY})
-SET_PROPERTY(TARGET pg_math PROPERTY COMPILE_DEFINITIONS "MATH_DLL" APPEND)
-
-TARGET_LINK_LIBRARIES(pg_math_static pg_core_static ${QT_PG_QTCORE_LIBRARY})
-SET_PROPERTY(TARGET pg_math_static PROPERTY COMPILE_DEFINITIONS "MATH_STATIC" APPEND)
-SET_PROPERTY(TARGET pg_math_static PROPERTY COMPILE_DEFINITIONS "CORE_STATIC" APPEND)
