--- a/mesh/CMakeLists.txt
+++ b/mesh/CMakeLists.txt
@@ -38,13 +38,5 @@ SET(pg_mesh_SRC
 	${MOC_FILES}
 )
 
-ADD_LIBRARY(pg_mesh SHARED EXCLUDE_FROM_ALL ${pg_mesh_SRC})
-ADD_LIBRARY(pg_mesh_static STATIC EXCLUDE_FROM_ALL ${pg_mesh_SRC})
-
-SETUP_LIBRARY(pg_mesh)
+ADD_LIBRARY(pg_mesh STATIC ${pg_mesh_SRC})
 TARGET_LINK_LIBRARIES(pg_mesh pg_core pg_tbb)
-SET_PROPERTY(TARGET pg_mesh PROPERTY COMPILE_DEFINITIONS "MESH_DLL" APPEND)
-
-TARGET_LINK_LIBRARIES(pg_mesh_static pg_core_static pg_tbb)
-SET_PROPERTY(TARGET pg_mesh_static PROPERTY COMPILE_DEFINITIONS "MESH_STATIC" APPEND)
-SET_PROPERTY(TARGET pg_mesh_static PROPERTY COMPILE_DEFINITIONS "CORE_STATIC" APPEND)
