--- a/3rdparty/intel_tbb/CMakeLists.txt
+++ b/3rdparty/intel_tbb/CMakeLists.txt
@@ -74,7 +74,7 @@ INCLUDE_DIRECTORIES(
 	src
 )
 
-ADD_LIBRARY(pg_tbb SHARED
+ADD_LIBRARY(pg_tbb STATIC
 
 	include/tbb/compat/ppl.h
 	include/tbb/machine/ibm_aix51.h
@@ -164,7 +164,7 @@ ADD_LIBRARY(pg_tbb SHARED
 
 )
 
-ADD_LIBRARY(pg_tbbmalloc SHARED
+ADD_LIBRARY(pg_tbbmalloc STATIC
 
 	src/tbbmalloc/Customize.h
 	src/tbbmalloc/LifoQueue.h
@@ -177,19 +177,5 @@ ADD_LIBRARY(pg_tbbmalloc SHARED
 
 )
 
-SET_TARGET_PROPERTIES(pg_tbb PROPERTIES
-	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-)
 TARGET_LINK_LIBRARIES(pg_tbb ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS})
-
-SET_TARGET_PROPERTIES(pg_tbbmalloc PROPERTIES
-	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-)
 TARGET_LINK_LIBRARIES(pg_tbbmalloc pg_tbb)
-
-IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
- SET_TARGET_PROPERTIES(pg_tbb PROPERTIES COMPILE_FLAGS "-fvisibility=default -w")
- SET_TARGET_PROPERTIES(pg_tbbmalloc PROPERTIES COMPILE_FLAGS "-fvisibility=default -w")
-ENDIF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
