--- a/3rdparty/libogg/CMakeLists.txt
+++ b/3rdparty/libogg/CMakeLists.txt
@@ -20,17 +20,8 @@ INCLUDE_DIRECTORIES(
 	include
 )
 
-ADD_LIBRARY(pg_ogg SHARED
+ADD_LIBRARY(pg_ogg STATIC
 	src/bitwise.c
 	src/framing.c
 	win32/ogg.def
 )
-
-SET_TARGET_PROPERTIES(pg_ogg PROPERTIES
-	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-)
-
-IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
- SET_TARGET_PROPERTIES(pg_ogg PROPERTIES COMPILE_FLAGS "-fvisibility=default -w")
-ENDIF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
