--- a/3rdparty/zlib/CMakeLists.txt
+++ b/3rdparty/zlib/CMakeLists.txt
@@ -20,7 +20,7 @@ INCLUDE_DIRECTORIES(
 	${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-ADD_LIBRARY(pg_zlib SHARED
+ADD_LIBRARY(pg_zlib STATIC
 
 	adler32.c
 	compress.c
@@ -57,11 +57,3 @@ ADD_LIBRARY(pg_zlib SHARED
 
 )
 
-SET_TARGET_PROPERTIES(pg_zlib PROPERTIES
-	RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-	LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
-)
-
-IF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
- SET_TARGET_PROPERTIES(pg_zlib PROPERTIES COMPILE_FLAGS "-fvisibility=default -w")
-ENDIF(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
