Superplex compilers and runs successfully on OSX.

--- a/games/superplex/CMakeLists.txt
+++ b/games/superplex/CMakeLists.txt
@@ -203,3 +203,5 @@ SET_PROPERTY(TARGET superplex3d PROPERTY COMPILE_DEFINITIONS "MATH_STATIC" APPEN
 SET_PROPERTY(TARGET superplex3d PROPERTY COMPILE_DEFINITIONS "MESH_STATIC" APPEND)
 SET_PROPERTY(TARGET superplex3d PROPERTY COMPILE_DEFINITIONS "IMAGE_STATIC" APPEND)
 SET_PROPERTY(TARGET superplex3d PROPERTY COMPILE_DEFINITIONS "SOUND_STATIC" APPEND)
+
+SET_TARGET_PROPERTIES(superplex3d PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
