--- a/games/lines/CMakeLists.txt
+++ b/games/lines/CMakeLists.txt
@@ -47,3 +47,5 @@ SET_PROPERTY(TARGET lines PROPERTY COMPILE_DEFINITIONS "MATH_STATIC" APPEND)
 SET_PROPERTY(TARGET lines PROPERTY COMPILE_DEFINITIONS "MESH_STATIC" APPEND)
 SET_PROPERTY(TARGET lines PROPERTY COMPILE_DEFINITIONS "IMAGE_STATIC" APPEND)
 SET_PROPERTY(TARGET lines PROPERTY COMPILE_DEFINITIONS "SOUND_STATIC" APPEND)
+
+SET_TARGET_PROPERTIES(lines PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
