Cleaned up build scripts and removed dead source code.

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -9,5 +9,8 @@ ADD_SUBDIRECTORY(libjpeg)
 ADD_SUBDIRECTORY(libpng)
 ADD_SUBDIRECTORY(libogg)
 ADD_SUBDIRECTORY(libvorbis)
-ADD_SUBDIRECTORY(openal_soft)
 ADD_SUBDIRECTORY(tinyxml)
+
+IF(WIN32)
+	ADD_SUBDIRECTORY(openal_soft)
+ENDIF()
