--- a/3rdparty/libjpeg/CMakeLists.txt
+++ b/3rdparty/libjpeg/CMakeLists.txt
@@ -1,23 +1,9 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
-PROJECT(libjpeg)
-
-ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS=1")
-ADD_DEFINITIONS("-D_SCL_SECURE_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_DEPRECATE=1")
-
-IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	ADD_DEFINITIONS("-D_DEBUG")
-ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	ADD_DEFINITIONS("-D_SECURE_SCL=0")
-	ADD_DEFINITIONS("-D_HAS_ITERATOR_DEBUGGING=0")
-	ADD_DEFINITIONS("-DNDEBUG")
-ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
+PROJECT(pg_jpeg)
 
 ADD_LIBRARY(pg_jpeg STATIC
-
 	jaricom.c
 	jcapimin.c
 	jcapistd.c
@@ -73,5 +59,4 @@ ADD_LIBRARY(pg_jpeg STATIC
 	jquant2.c
 	jutils.c
 	jversion.h
-
 )
