--- a/3rdparty/libpng/CMakeLists.txt
+++ b/3rdparty/libpng/CMakeLists.txt
@@ -1,27 +1,9 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
-PROJECT(libpng)
-
-ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS=1")
-ADD_DEFINITIONS("-D_SCL_SECURE_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_DEPRECATE=1")
-
-IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	ADD_DEFINITIONS("-D_DEBUG")
-ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	ADD_DEFINITIONS("-D_SECURE_SCL=0")
-	ADD_DEFINITIONS("-D_HAS_ITERATOR_DEBUGGING=0")
-	ADD_DEFINITIONS("-DNDEBUG")
-ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-
-INCLUDE_DIRECTORIES(
-	${zlib_SOURCE_DIR}
-)
+PROJECT(pg_png)
 
 ADD_LIBRARY(pg_png STATIC
-
 	png.c
 	png.h
 	pngconf.h
@@ -41,7 +23,6 @@ ADD_LIBRARY(pg_png STATIC
 	pngwrite.c
 	pngwtran.c
 	pngwutil.c
-
 )
 
 TARGET_LINK_LIBRARIES(pg_png pg_zlib)
