--- a/3rdparty/libvorbis/CMakeLists.txt
+++ b/3rdparty/libvorbis/CMakeLists.txt
@@ -1,20 +1,7 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
-PROJECT(libvorbis)
-
-ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS=1")
-ADD_DEFINITIONS("-D_SCL_SECURE_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_DEPRECATE=1")
-
-IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	ADD_DEFINITIONS("-D_DEBUG")
-ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	ADD_DEFINITIONS("-D_SECURE_SCL=0")
-	ADD_DEFINITIONS("-D_HAS_ITERATOR_DEBUGGING=0")
-	ADD_DEFINITIONS("-DNDEBUG")
-ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
+PROJECT(pg_vorbis)
 
 ADD_DEFINITIONS(-DHAVE_CONFIG_H)
 
@@ -26,25 +13,9 @@ ENDIF(MSVC)
 INCLUDE(CheckIncludeFile)
 
 CHECK_INCLUDE_FILE(alloca.h HAVE_ALLOCA_H)
-CONFIGURE_FILE(config.h.in ${CMAKE_CURRENT_BINARY_DIR}/config.h)
+CONFIGURE_FILE(config.h.in "${CMAKE_CURRENT_BINARY_DIR}/config.h")
 
-INCLUDE_DIRECTORIES(
-	${CMAKE_CURRENT_BINARY_DIR}
-	${libogg_SOURCE_DIR}/include
-	include
-	lib
-)
-
-SET(DEF_FILE )
-
-IF(WIN32)
-	SET(DEF_FILE "${CMAKE_CURRENT_BINARY_DIR}/vorbis.def")
-	FILE(READ win32/vorbis.def VORBIS_DEF)
-	FILE(READ win32/vorbisfile.def VORBISFILE_DEF)
-	STRING(REPLACE "LIBRARY" "" VORBISFILE_DEF "${VORBISFILE_DEF}")
-	STRING(REPLACE "EXPORTS" "" VORBISFILE_DEF "${VORBISFILE_DEF}")
-	FILE(WRITE "${DEF_FILE}" "${VORBIS_DEF}\n${VORBISFILE_DEF}")
-ENDIF(WIN32)
+INCLUDE_DIRECTORIES(lib "${CMAKE_CURRENT_BINARY_DIR}")
 
 ADD_LIBRARY(pg_vorbis STATIC
 	lib/mdct.c
@@ -88,7 +59,6 @@ ADD_LIBRARY(pg_vorbis STATIC
 	lib/codec_internal.h
 	lib/backends.h
 	lib/bitrate.h
-	${DEF_FILE}
 )
 
 TARGET_LINK_LIBRARIES(pg_vorbis pg_ogg)
