--- a/3rdparty/tinyxml/CMakeLists.txt
+++ b/3rdparty/tinyxml/CMakeLists.txt
@@ -1,14 +1,7 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
-PROJECT(tinyxml)
-
-INCLUDE(${cmake_SOURCE_DIR}/common.cmake)
-INCLUDE(${cmake_SOURCE_DIR}/defines.cmake)
-
-INCLUDE_DIRECTORIES(
-	${CMAKE_CURRENT_SOURCE_DIR}
-)
+PROJECT(pg_tinyxml)
 
 ADD_LIBRARY(tinyxml STATIC
 	tinyxml.cpp
