--- a/math/CMakeLists.txt
+++ b/math/CMakeLists.txt
@@ -3,16 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
 PROJECT(pg_math)
 
-INCLUDE(${cmake_SOURCE_DIR}/common.cmake)
-INCLUDE(${cmake_SOURCE_DIR}/defines.cmake)
-
-INCLUDE_DIRECTORIES(
-	${CMAKE_CURRENT_SOURCE_DIR}/..
-)
-
-QT4_WRAP_CPP(MOC_FILES camera.h)
-
-SET(pg_math_SRC
+ADD_LIBRARY(pg_math STATIC
 	aabb.h
 	camera.cpp
 	camera.h
@@ -30,8 +21,6 @@ SET(pg_math_SRC
 	vector2.h
 	vector3.h
 	vector4.h
-	${MOC_FILES}
 )
 
-ADD_LIBRARY(pg_math STATIC ${pg_math_SRC})
-TARGET_LINK_LIBRARIES(pg_math pg_core ${QT_PG_QTCORE_LIBRARY})
+TARGET_LINK_LIBRARIES(pg_math pg_core)
