--- a/3rdparty/libogg/CMakeLists.txt
+++ b/3rdparty/libogg/CMakeLists.txt
@@ -1,27 +1,9 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
-PROJECT(libogg)
-
-ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS=1")
-ADD_DEFINITIONS("-D_SCL_SECURE_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_DEPRECATE=1")
-
-IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	ADD_DEFINITIONS("-D_DEBUG")
-ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	ADD_DEFINITIONS("-D_SECURE_SCL=0")
-	ADD_DEFINITIONS("-D_HAS_ITERATOR_DEBUGGING=0")
-	ADD_DEFINITIONS("-DNDEBUG")
-ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-
-INCLUDE_DIRECTORIES(
-	include
-)
+PROJECT(pg_ogg)
 
 ADD_LIBRARY(pg_ogg STATIC
 	src/bitwise.c
 	src/framing.c
-	win32/ogg.def
 )
