--- a/3rdparty/openal_soft/CMakeLists.txt
+++ b/3rdparty/openal_soft/CMakeLists.txt
@@ -10,25 +10,7 @@ IF(COMMAND CMAKE_POLICY)
   CMAKE_POLICY(SET CMP0003 NEW)
 ENDIF(COMMAND CMAKE_POLICY)
 
-PROJECT(openal_soft C)
-
-ADD_DEFINITIONS("-D_CRT_SECURE_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-D_CRT_SECURE_NO_WARNINGS=1")
-ADD_DEFINITIONS("-D_SCL_SECURE_NO_DEPRECATE=1")
-ADD_DEFINITIONS("-D_CRT_NONSTDC_NO_DEPRECATE=1")
-
-IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	ADD_DEFINITIONS("-D_DEBUG")
-ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
-	ADD_DEFINITIONS("-D_SECURE_SCL=0")
-	ADD_DEFINITIONS("-D_HAS_ITERATOR_DEBUGGING=0")
-	ADD_DEFINITIONS("-DNDEBUG")
-ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")
-
-IF(MSVC)
-	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4244 /wd4005 /wd4305")
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4244 /wd4005 /wd4305")
-ENDIF(MSVC)
+PROJECT(pg_openal C)
 
 INCLUDE(CheckFunctionExists)
 INCLUDE(CheckLibraryExists)
