Moved 'glsl_compiler' to '3rdparty'.

--- a/3rdparty/CMakeLists.txt
+++ b/3rdparty/CMakeLists.txt
@@ -10,6 +10,7 @@ ADD_SUBDIRECTORY(libpng)
 ADD_SUBDIRECTORY(libogg)
 ADD_SUBDIRECTORY(libvorbis)
 ADD_SUBDIRECTORY(tinyxml)
+ADD_SUBDIRECTORY(glsl_compiler)
 
 IF(WIN32)
 	ADD_SUBDIRECTORY(openal_soft)
