--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -1,6 +1,10 @@
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
+PROJECT(engine)
+
+INCLUDE(cmake/Common.cmake)
+
 ADD_SUBDIRECTORY(3rdparty)
 ADD_SUBDIRECTORY(core)
 ADD_SUBDIRECTORY(opengl)
