--- a/engine/3rdparty/glsl_compiler/CMakeLists.txt
+++ b/engine/3rdparty/glsl_compiler/CMakeLists.txt
@@ -3,6 +3,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
 PROJECT(glsl_compiler)
 
+DISABLE_WARNINGS()
+
 FILE(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/library")
 
 INCLUDE_DIRECTORIES(
