--- a/engine/3rdparty/intel_tbb/CMakeLists.txt
+++ b/engine/3rdparty/intel_tbb/CMakeLists.txt
@@ -3,6 +3,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6.2)
 
 PROJECT(pg_tbb)
 
+DISABLE_WARNINGS()
+
 ADD_DEFINITIONS("-D__TBB_BUILD=1")
 ADD_DEFINITIONS("-D__TBB_EXCEPTIONS=1")
 ADD_DEFINITIONS("-D__TBB_NO_IMPLICIT_LINKAGE=1")
