--- a/engine/3rdparty/openal_soft/CMakeLists.txt
+++ b/engine/3rdparty/openal_soft/CMakeLists.txt
@@ -12,6 +12,8 @@ ENDIF(COMMAND CMAKE_POLICY)
 
 PROJECT(pg_openal C)
 
+DISABLE_WARNINGS()
+
 INCLUDE(CheckFunctionExists)
 INCLUDE(CheckLibraryExists)
 INCLUDE(CheckIncludeFile)
